# course

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  _typos.toml  build.rs  lychee.toml  nixpacks.toml
docs/: architecture.md  cheatsheet.md  course_redesign.md  exercise_findings.md  getting_unstuck.md  in_browser_exercises.md  learner_journey.md  multi_step_chapters_plan.md  quiz_module_plan.md  why_rust.md  writing-guidelines.md
examples/: 00_hello_rust.rs  01_basic_types.rs  01_integer_handling.rs  02_enums_and_matching.rs  02_numbers_and_math.rs  02_strings_and_chars.rs  03_enums_and_matching.rs  03_strings_and_text.rs  03_vectors_basics.rs  04_collections_basics.rs  04_hashmaps.rs  04_vectors_basics.rs  05_tuples.rs  05_tuples_and_structs.rs  06_option_and_some_none.rs  06_option_handling.rs  07_result_and_error_handling.rs  07_result_handling.rs  08_ownership_and_borrowing.rs  08_ownership_basics.rs  09_ownership_basics.rs  09_structs_and_methods.rs  10_enums_and_matching.rs  10_iterator_patterns.rs  10_structs_and_methods.rs  11_iterator_patterns.rs  11_password_validator.rs  11_strings_and_chars.rs  12_env_parser.rs  12_password_validator.rs  13_csv_parser.rs  13_env_parser.rs  13_modules.rs  13_question_mark_operator.rs  15_modules.rs  15_rust_fundamentals_quiz.rs  15_word_counter.rs  16_env_parser.rs  16_quiz.rs  17_env_parser.rs  (+1 more)
migrations/: 001_initial.sql  002_allow_multiple_submissions.sql  003_add_submission_hash.sql  004_rename_chapter_slugs.sql  005_concept_first_chapter_slugs.sql  006_multi_step_submissions.sql  007_add_team_token.sql  008_dashboard_absorbs_hello_chapter.sql  009_insert_traits_and_smart_pointers.sql  010_restructure_chapter_spiral.sql
scripts/: check-examples.sh  check-solutions.sh
src/: exercises.rs  lib.rs  main.rs  types.rs
static/: cheatsheet.md  quiz.html  tour_starter.rs
templates/: _submission_card.html  admin.html  base.html  cheatsheet.html  dashboard.html  (+7 more)
(+812 files in other folders)
