[package]
name = "cargo-course"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cargo-course"
path = "src/bin/cli.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "test_server"
path = "src/bin/test_server.rs"

[[bin]]
name = "minimal_server"
path = "src/bin/minimal_server.rs"

[dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ulid = "1.0"
tokio = { version = "1.0", features = ["full"] }

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }

# Server dependencies
axum = { version = "0.8.4", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
    "migrate",
] }
askama = { version = "0.13" }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
open = "5.3.2"
env_logger = "0.11"
log = "0.4"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
# Allow some pedantic lints that are too noisy
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
